--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
         #canvas {
             display: none;
         }
+        body {
+
+            max-width: 675px !important
+
+        }
         .file-input-wrapper {
             position: relative;
             overflow: hidden;
